--- a/settings.yml
+++ b/settings.yml
@@ -7,7 +7,7 @@ inserted_background_color_override:
   type: string
   default: ""
   description:
-    en: "The color of the background of the inserted selections, in hexadecimal, css color name (https://www.w3schools.com/colors/colors_picker.asp) or Discourse color variable. Leave this blank to use the current theme's CSS default for <ins></ins>. Note that changing this will apply the new background color to already existing inserted text throughout the site."
+    en: "The color of the background of the inserted selections, in hexadecimal, css color name (https://www.w3schools.com/colors/colors_picker.asp) or Discourse color variable. Leave this blank to use the current theme's CSS default. Note that changing this will apply the new background color to already existing inserted text throughout the site."
 
 inserted_text_color_override:
   type: string
